Global App Name

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Slim2 Skeleton</title>
+  <title>{{ app_name}}::{{ page_title }}</title>
 
   <!-- Bootstrap core CSS -->
 
