--- a/src/templates/resetpassword.html
+++ b/src/templates/resetpassword.html
@@ -39,62 +39,31 @@
 <body style="background:#F7F7F7;">
 
   <div class="">
-    <a class="hiddenanchor" id="tolostpassword"></a>
-    <a class="hiddenanchor" id="tologin"></a>
 
     <div id="wrapper">
       <div id="login" class="animate form">
         <section class="login_content">
-          <form method="post" action="{{ urlFor('auth') }}" id="login-form">
-            <h1>Login Form</h1>
-            <div>
-              <input type="text" name="username" class="form-control" placeholder="Username" required="" />
-            </div>
+          <form method="post" action="{{ urlFor('doresetpass') }}" id="login-form">
+            <input type="hidden" name="passcode" class="form-control" value="{{ passcode }}" />
+            <input type="hidden" name="username" class="form-control" value="{{ username }}" />
+            <h1>Reset Password</h1>
             <div>
               <input type="password" name="password" class="form-control" placeholder="Password" required="" />
             </div>
             <div>
-              <a class="btn btn-default submit" href="#" onclick="$('#login-form').submit();">Log in</a>
+              <input type="password" name="repassword" class="form-control" placeholder="Repeat Password" required="" />
+            </div>
+            <div>
+              <a class="btn btn-default submit" href="#" onclick="$('#login-form').submit();">Reset Password</a>
             </div>
             <div class="clearfix"></div>
             <div class="separator">
-              <p class="change_link">
-                <a href="#tolostpassword" class="to_lostpassword"> Lost your password?</a>
-                <a class="reset_pass" href="#"></a>
-              </p>
             </div>
             <div class="clearfix"></div>
               <br />
               <div>
                 <p>©2015 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
               </div>
-          </form>
-          <!-- form -->
-        </section>
-        <!-- content -->
-      </div>
-      <div id="lostpassword" class="animate form">
-        <section class="login_content">
-          <form method="post" action="{{ urlFor('lostpassword') }}" id="lostpass-form">
-            <h1>Lost password</h1>
-            <div>
-              <input type="email" name='email' class="form-control" placeholder="Email" required="" />
-            </div>
-            <div>
-              <a class="btn btn-default submit" href="#" onclick="$('#lostpass-form').submit();">Submit</a>
-            </div>
-            <div class="clearfix"></div>
-            <div class="separator">
-
-              <p class="change_link">
-                <a href="#tologin" class="to_register"> Log in </a>
-              </p>
-              <div class="clearfix"></div>
-              <br />
-              <div>
-                <p>©2015 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
-              </div>
-            </div>
           </form>
           <!-- form -->
         </section>
