--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -89,9 +89,9 @@
                   <span class=" user fa fa-angle-down"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                  <li><a href="{{ urlFor('user',{"id":logged_user.id}) }}">  Profile</a>
+                  <li><a href="{{ urlFor('user',{"id":logged_user.id}) }}">{{ "Profile"|trans }}</a>
                   </li>
-                  <li><a href="{{ urlFor('logout') }}"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                  <li><a href="{{ urlFor('logout') }}"><i class="fa fa-sign-out pull-right"></i>{{ "Log Out"|trans }}</a>
                   </li>
                 </ul>
               </li>
