--- a/src/templates/sidebar_menu.html
+++ b/src/templates/sidebar_menu.html
@@ -3,9 +3,9 @@
   <div class="menu_section">
     <h3>General</h3>
     <ul class="nav side-menu">
-      <li><a href="{{ baseUrl() }}"><i class="fa fa-home"></i> Home </a>
+      <li><a href="{{ baseUrl() }}"><i class="fa fa-home"></i> {{ "Home"|trans }} </a>
       </li>
-      <li><a href="{{ baseUrl() }}/users"><i class="fa fa-user"></i>Users</span></a>
+      <li><a href="{{ baseUrl() }}/users"><i class="fa fa-user"></i>{{ "Users"|trans }}</span></a>
       </li>
     </ul>
   </div>
