--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -5,10 +5,10 @@
         <thead>
           <tr>
             <th>#</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Username</th>
-            <th>Action</th>
+            <th>{{ "First Name"|trans }}</th>
+            <th>{{ "Last Name"|trans }}</th>
+            <th>{{ "Username"|trans }}</th>
+            <th>{{ "Action"|trans }}</th>
           </tr>
         </thead>
         <tbody>
@@ -19,10 +19,10 @@
             <td>{{ user.last_name }}</td>
             <td>{{ user.email }}</td>
             <td>
-              <a href="{{ urlFor('user',{"id":user.id}) }}" title="Edit"><i class="fa fa-edit fa-lg"></i></a>
+              <a href="{{ urlFor('user',{"id":user.id}) }}" title="{{ "Edit"|trans }}"><i class="fa fa-edit fa-lg"></i></a>
               <!-- <a href="path_for('delete',{'id':userid})"><i class="fa fa-remove"></i></a> -->
-              <a href="#" title="Delete"><i class="fa fa-remove fa-lg"></i></a>
-              <a href="#" title="Create"><i class="fa fa-plus fa-lg"></i></a>
+              <a href="#" title="{{ "Delete"|trans }}"><i class="fa fa-remove fa-lg"></i></a>
+              <a href="#" title="{{ "Create"|trans }}"><i class="fa fa-plus fa-lg"></i></a>
             </td>
           </tr>
           {% endfor %}
