--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -108,7 +108,7 @@
         <div class="">
           <div class="page-title">
             <div class="title_left">
-              <h3>{{ page_title }}</h3>
+              <h3>{{ page_title|trans }}</h3>
             </div>
 
             <div class="title_right">
