Added Success notifications

--- a/src/templates/notifications.html
+++ b/src/templates/notifications.html
@@ -14,4 +14,11 @@
       type: 'info'
     });
     {% endif %}
+    {% if flash.Success %}
+    new PNotify({
+      title: 'Success',
+      text: '{{ flash.Success|trans }}',
+      type: 'success'
+    });
+    {% endif %}
 </script>
