--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -130,6 +130,7 @@
               <div class="x_panel">
                 <div class="x_title">
                   <h2>{{ panel_title }}</h2>
+                        {% block panel_actions %}{% endblock %}
                   <div class="clearfix"></div>
                 </div>
                 <div class="x-content">
