--- a/src/templates/base_table.html
+++ b/src/templates/base_table.html
@@ -3,7 +3,7 @@
 {% block panel_actions %}
                     <ul class="nav navbar-right panel_toolbox">
                       <li>
-                        <a class="btn btn-primary btn-sm" href="{{ baseUrl() }}/{{ model }}/0">{{ "new"|trans }}</a>
+                        <a class="btn btn-primary btn-sm" href="{{ baseUrl() }}/{{ model }}/new">{{ "new"|trans }}</a>
                       </li>
                     </ul>
 {% endblock %}
