--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -24,10 +24,39 @@
       <input id="email" class="form-control col-md-7 col-xs-12" type="text" name="email" value="{{ user.email }}">
     </div>
   </div>
+  <div class="form-group">
+    <label for="password" class="control-label col-md-3 col-sm-3 col-xs-12">{{ "New Password"|trans }}</label>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+      <input id="password" class="form-control col-md-7 col-xs-12" type="password" name="password" value="">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="repeat-password" class="control-label col-md-3 col-sm-3 col-xs-12">{{ "Repeat Password"|trans }}</label>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+      <input id="repeat-password" class="form-control col-md-7 col-xs-12" type="password" name="repeat-password" value="">
+    </div>
+  </div>
+  {% if isAdmin %}
+  <div class="form-group">
+    <label for="group" class="control-label col-md-3 col-sm-3 col-xs-12">{{ "Group"|trans }}</label>
+    <div class="col-md-6 col-sm-6 col-xs-12">
+      <select id="group" name="group[]" class="form-control combobox" required multiple>
+          {% for group in groups %}
+              {% if group.id in usr_groups %}
+              <option value="{{group.id}}" selected>{{group.name}}</option>
+              {% else %}
+                  <option value="{{group.id}}">{{group.name}}</option>
+              {% endif %}
+          {% endfor%}
+      </select>
+    </div>
+  </div>
+  {% endif %}
+  {% include 'extend_user.html' ignore missing %}
   <div class="ln_solid"></div>
   <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-      <button onclick="window.location = '{{ urlFor('users') }}'" class="btn btn-primary">{{ "Cancel"|trans }}</button>
+      <a href="#" onclick="location.href = '{{ urlFor('users') }}'" class="btn btn-primary">{{ "Cancel"|trans }}</a>
       <button type="submit" class="btn btn-success">{{ "Submit"|trans }}</button>
     </div>
   </div>
