--- a/src/templates/sidebar_menu.html
+++ b/src/templates/sidebar_menu.html
@@ -3,10 +3,15 @@
   <div class="menu_section">
     <h3>General</h3>
     <ul class="nav side-menu">
-      <li><a href="{{ baseUrl() }}"><i class="fa fa-home"></i> {{ "Home"|trans }} </a>
-      </li>
-      <li><a href="{{ baseUrl() }}/users"><i class="fa fa-user"></i>{{ "Users"|trans }}</span></a>
-      </li>
+      {% for key,entry in menu %}
+        {% if entry.permission == 'admin'and isAdmin %}
+          <li><a href="{{ baseUrl() }}/{{ entry.url }}"><i class="fa {{ entry.icon }}"></i> {{ key|trans }} </a>
+          </li>
+        {% elseif entry.permission == 'users' %}
+          <li><a href="{{ baseUrl() }}/{{ entry.url }}"><i class="fa {{ entry.icon }}"></i> {{ key|trans }} </a>
+              </li>
+        {% endif %}
+      {% endfor %}
     </ul>
   </div>
 
