--- a/src/templates/users.html
+++ b/src/templates/users.html
@@ -23,15 +23,11 @@
                               {% for user in users %}
                               <tr>
                                 <th scope="row">{{ loop.index }}</th>
-                                <td>{{ user.first_name }}</td>
-                                <td>{{ user.last_name }}</td>
-                                <td>{{ user.email }}</td>
+                                <td><a href="{{ baseUrl() }}/users/{{user.id}}">{{ user.first_name }}</a></td>
+                                <td><a href="{{ baseUrl() }}/users/{{user.id}}">{{ user.last_name }}</a></td>
+                                <td><a href="{{ baseUrl() }}/users/{{user.id}}">{{ user.email }}</a></td>
                                 <td>
-                                  <a href="{{ urlFor('user',{"id":user.id}) }}" title="{{ "Edit"|trans }}"><i class="fa fa-edit fa-lg"></i></a>
-
                                   <a onclick="$('#usr_action').attr('action','{{ baseUrl() }}/users/{{ user.id }}');$('#action_method').val('DELETE');" href="#" title="{{ "Delete"|trans }}" data-entity-id="{{ user.id }}" data-toggle="modal" data-target=".delete-modal"><i class="fa fa-remove fa-lg"></i></a>
-
-                                  <a href="#" title="{{ "Create"|trans }}"><i class="fa fa-plus fa-lg"></i></a>
                                 </td>
                               </tr>
                               {% endfor %}
