Added js_crsipt block for js customization

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -171,6 +171,7 @@
   <script>
     NProgress.done();
   </script>
+{% block js_scripts %}{% endblock %}
 {% include 'notifications.html' %}
 <!-- /footer content -->
 </body>
