--- a/src/templates/default/login.html
+++ b/src/templates/default/login.html
@@ -12,17 +12,17 @@
 
   <!-- Bootstrap core CSS -->
 
-  <link href="{{ baseUrl() }}/assets/default/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{{ baseUrl() }}/assets/{{ app_theme }}/css/bootstrap.min.css" rel="stylesheet">
 
-  <link href="{{ baseUrl() }}/assets/default/fonts/css/font-awesome.min.css" rel="stylesheet">
-  <link href="{{ baseUrl() }}/assets/default/css/animate.min.css" rel="stylesheet">
+  <link href="{{ baseUrl() }}/assets/{{ app_theme }}/fonts/css/font-awesome.min.css" rel="stylesheet">
+  <link href="{{ baseUrl() }}/assets/{{ app_theme }}/css/animate.min.css" rel="stylesheet">
 
   <!-- Custom styling plus plugins -->
-  <link href="{{ baseUrl() }}/assets/default/css/custom.css" rel="stylesheet">
-  <link href="{{ baseUrl() }}/assets/default/css/icheck/flat/green.css" rel="stylesheet">
+  <link href="{{ baseUrl() }}/assets/{{ app_theme }}/css/custom.css" rel="stylesheet">
+  <link href="{{ baseUrl() }}/assets/{{ app_theme }}/css/icheck/flat/green.css" rel="stylesheet">
 
 
-  <script src="{{ baseUrl() }}/assets/default/js/jquery.min.js"></script>
+  <script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/jquery.min.js"></script>
 
   <!--[if lt IE 9]>
         <script src="../assets/js/ie8-responsive-file-warning.js"></script>
