--- a/src/templates/default/users.html
+++ b/src/templates/default/users.html
@@ -60,20 +60,20 @@
     </div>
 
 <!-- Datatables-->
-<script src="{{ baseUrl() }}/assets/default/js/datatables/jquery.dataTables.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/dataTables.bootstrap.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/dataTables.buttons.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/buttons.bootstrap.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/jszip.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/pdfmake.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/vfs_fonts.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/buttons.html5.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/buttons.print.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/dataTables.fixedHeader.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/dataTables.keyTable.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/dataTables.responsive.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/responsive.bootstrap.min.js"></script>
-<script src="{{ baseUrl() }}/assets/default/js/datatables/dataTables.scroller.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/jquery.dataTables.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/dataTables.bootstrap.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/dataTables.buttons.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/buttons.bootstrap.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/jszip.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/pdfmake.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/vfs_fonts.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/buttons.html5.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/buttons.print.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/dataTables.fixedHeader.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/dataTables.keyTable.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/dataTables.responsive.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/responsive.bootstrap.min.js"></script>
+<script src="{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/dataTables.scroller.min.js"></script>
 
 <script>
     $('#btn-del').click(function(){
@@ -85,7 +85,7 @@
     var table = $('#table-bookings').DataTable({
         order: [[ 1, "desc" ]],
         language: {
-            url: '{{ baseUrl() }}/assets/default/js/datatables/localisation/{{ lang }}.json'
+            url: '{{ baseUrl() }}/assets/{{ app_theme }}/js/datatables/localisation/{{ lang }}.json'
         }
     });
     table.columns().every( function () {
